--- a/Seminar1/homework/templates/base.html
+++ b/Seminar1/homework/templates/base.html
@@ -13,7 +13,7 @@
     <div class="container-fluid">
       <ul class="nav nav-pills justify-content-center align-items-end">
         <li class="nav-item">
-          <a href="/main/" class="nav-link">Основная</a>
+          <a href="/main/" class="nav-link">Главная</a>
         </li>
         <li class="nav-item">
           <a href="/clothes/" class="nav-link">Одежда</a>
