--- a/seminar2/homework/templates/error_403.html
+++ b/seminar2/homework/templates/error_403.html
@@ -4,5 +4,5 @@
         <h1>{{ text_message_error }}</h1>
         <p>Доступ запрещён!!!</p>
     </div>
-    <a href="task_03_check_user">Ввести данные заново</a>
+    <a href="/">На главную</a>
 {% endblock content %}
