--- a/Seminar3/homework/templates/index.html
+++ b/Seminar3/homework/templates/index.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-    <title>Мой сайт</title>
-</head>
-<body>
-    <h1>Приветствуем вас!!!</h1>
-    <a href="books">Посмотреть список книг</a>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+<a href="books">Посмотреть список книг</a>
+
+{% endblock content %}
