--- a/Seminar3/homework/templates/base.html
+++ b/Seminar3/homework/templates/base.html
@@ -2,12 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-    <title>Мой сайт</title>
+    <title>Document</title>
 </head>
-<body>
-    <h1>Приветствуем вас!!!</h1>
-    
-</body>
+    <body>
+        <div class="container-fluid">
+            <ul class="nav nav-pills justify-content-end align-items-end">
+                <li class="nav-item"><a href="/index/" class="nav-link">Основная</a></li>
+                <li class="nav-item"><a href="/data/" class="nav-link">Данные</a></li>
+            </ul>
+        
+            <div class="row">
+                <h1 class="col-12 col-md-6 display-2">Привет, меня зовут Дмитрий</h1>
+            </div>
+            {% block content %}
+            {% endblock %}
+            <div class="row fixed-bottom modal-footer">
+                <hr>
+                <p>Все права защищены &copy;</p>
+            </div>
+        </div>
+    </body>
 </html>
