--- a/Seminar3/homework/templates/books.html
+++ b/Seminar3/homework/templates/books.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Список</title>
+    <title>Список книг</title>
 </head>
 <body>
     <h1>Список книг в базе</h1>
     <img src="../static/image/logo.png" alt="logo">
+    <a href="/">На главную</a>
     <div class="row">
         {% for i in books%}
             <p class="col-12 col-md-6">
