--- a/Seminar3/homework/templates/students.html
+++ b/Seminar3/homework/templates/students.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Вот наши студенты</h1>
     <img src="../static/image/logo.png" alt="logo">
+    <a href="/">На главную</a>
     <div class="row">
         {% for st in student%}
             <p class="col-12 col-md-6">
